<resources>
    <string name="app_name">Capstone</string>
    <string name="signInWGoogle">Continue with Google</string>
    <string name="forgotPassword">Forgot Password?</string>
    <string name="signuptext">Sign up</string>
    <string name="enterEmailFP">Enter the email address you registered with and we\'ll send you instructions on how to reset your password</string>
    <string name="title_activity_home">home</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="loremipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras magna purus, tincidunt quis quam id, mattis fermentum nisl. Sed suscipit, risus</string>
    <string name="posts">Posts</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="title_activity_testchat">testchat</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>

</resources>