<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray90"
    tools:context=".Login">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:gravity="center"
    android:background="@color/gray90"
    >
    <ImageView
        android:id="@+id/app_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        />

    <TextView
        android:id="@+id/app_name"
        android:layout_below="@+id/app_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        android:fontFamily="sans-serif-black"
        android:textSize="32sp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="45dp"
        android:textColor="@color/black"
        />
    <EditText
        android:id="@+id/loginEmail"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/app_name"
        android:hint="@string/email"
        android:textSize="20sp"
        android:inputType="textEmailAddress"
        android:paddingLeft="10dp"
        android:focusable="true"
        android:paddingRight="10dp"/>

    <EditText
        android:id="@+id/loginPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@id/loginEmail"
        android:layout_marginTop="15dp"
        android:hint="@string/password"
        android:focusable="true"
        android:inputType="textPassword"
        android:paddingLeft="10dp"
        android:textSize="20sp"
        android:paddingRight="10dp" />

    <TextView
        android:id="@+id/forgotPass"
        android:layout_below="@+id/loginPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blue"
        android:textSize="18sp"
        android:fontFamily="sans-serif-medium"
        android:paddingTop="10dp"
        android:text="@string/forgotPassword"
        android:clickable="true"
        android:focusable="true"
        />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/forgotPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/ls_buttons"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:text="Log in"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="20sp" />




    <LinearLayout
        android:id="@+id/ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_login"
        android:orientation="horizontal"
        android:layout_marginTop="50dp"
        android:layout_centerHorizontal="true">
        <TextView
            android:id="@+id/donthaveacc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/don_t_have_an_account"
            android:textSize="20sp"
            android:layout_marginEnd="5dp"
            />

        <TextView
            android:id="@+id/signUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:text="@string/signuptext"
            android:clickable="true"
            android:focusable="true"
            />
    </LinearLayout>
</RelativeLayout>
</RelativeLayout>